web/css/style.css
/* ... */
.contact input[type="submit"]:hover {
    background-color: transparent;
    color: #333333;
    background: none;
    border: 2px solid #333333;
}

.agileits-w3layouts-footer {
    padding: 1em 0;
    text-align: center;
    background: #0f1215;
}

.agileits-w3layouts-footer p {
    color: #FFFFFF;
    margin: 0;
    font-size: .9em;
}

.agileits-w3layouts-footer p a {
    color: #FFFFFF;
    text-decoration: none;
}

.agileits-w3layouts-footer p a:hover {
    color: #004080;
}

@media(max-width:1440px) {
    #m_nav_menu {
        right: 140px!important;
    }
    .nav-tabs {
        width: 38%;
    }
    #m_nav_container {
        text-align: center !important;
        box-shadow: 0 0 2px #000 !important;
    }
}

@media(max-width:1366px) {
    #m_nav_menu {
        right: 105px!important;
    }
}

@media(max-width:1280px) {
    #m_nav_menu {
        right: 61px!important;
    }
    .nav-tabs {
        width: 43%;
    }
}

@media(min-width:1200px) {
    #buttonCluster {
        margin-top: 2%;
    }
}

@media(min-width:1200px) {
    #m_nav_list {
        margin: 2em 0 0 0 !important;
    }
}

@media(max-width:1199px) {
    #buttonCluster.banner-right-info {
        margin: 2em 0 0 0;
    }
}

@media(min-width:991px) and (max-width:1199px) {
    #buttonCluster {
        float: left;
        width: 100%;
        margin: 1em 0 0 0;
    }
}

@media(max-width:1150px) {
    #m_nav_list {
        margin: .5em 0 0 0 !important;
    }
}

@media(max-width:1080px) {
    .nav-tabs {
        width: 51%;
    }
    .m_nav_item a {
        font-weight: 600 !important;
    }
    .resume a {
        font-weight: 600 !important;
    }
    #m_nav_container {
        text-align: center !important;
        box-shadow: 0 0 2px #000 !important;
    }
    .nav-tabs {
        margin: 1em auto;
    }
}

@media(max-width:1024px) {
    #m_nav_menu {
        right: 33px!important;
    }
    .nav-tabs {
        width: 54%;
    }
}

@media(max-width:991px) {
    .agile-education-grid {
        margin-left: auto;
        margin-right: auto;
        float: none;
        width: 100%;
    }
    #educationTop {
        border-spacing: 30px;
        border-bottom: solid 2px #999999;
    }
    #educationMiddle {
        margin-top: 10px;
        margin-bottom: 10px;
        border-bottom: solid 2px #999999;
    }
    .w3ls-banner-left {
        width: 35%;
    }
    .w3ls-banner-right {
        width: 65%;
    }
    .banner-right-img {
        float: none;
        width: 35%;
    }
    .banner-right-info {
        float: none;
        width: 100%;
        margin: 1em 0 0 0;
    }
    .banner-right-img {
        width: 36%;
        margin: 0 auto;
    }
    .w3-button {
        margin: 1em 0 0 0;
    }
    .social-info {
        float: left;
        width: 30%;
    }
    #m_nav_menu {
        right: 100px!important;
    }
    .wthree-about-right {
        margin: 2em 0 0 0;
    }
    .education-grid2:before {
        left: -38px;
    }
    .education-grid2:after {
        right: -38px;
    }
    .experience-grid {
        border-right: none;
    }
    .experience-grid2 {
        border-bottom: solid 1px #999999 !important;
    }
    .m_nav_item a {
        font-size: 1em !important;
    }
    .resume a {
        font-size: 1em !important;
    }
    .feedback-grids {
        width: 100%;
    }
    .feedback-top:after {
        left: 10%;
    }
    .w3_tab_img_left {
        float: left;
        width: 25%;
    }
    .styled-input {
        width: 48%;
    }
}

@media(max-width:800px) {
    #m_nav_menu {
        right: 31px!important;
    }
    .nav-tabs {
        width: 70%;
    }
}

@media(max-width:736px) {
    #m_nav_menu {
        right: 16px!important;
    }
    .nav-tabs {
        width: 71%;
    }
    #m_nav_container {
        height: 230px !important;
    }
}
/* ... */

